--- a/roulette/index.html
+++ b/roulette/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ルーレットアプリ</title>
+    <title>インチキルーレット</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -11,10 +11,12 @@
         <div class="rouletteCenter" id="rouletteSecond">-66kg</div>
         <div class="roulette" id="rouletteThird">-73kg</div>
     </div>
-    <div class="buttons">
+    <!-- 以下活性化すればボタンが使えるようになる-->
+    <!-- <div class="buttons">
         <button onclick="start()">スタート</button>
         <button onclick="stop()">ストップ</button>
-    </div>
+    </div> -->
+    <!-- <div id="clickable">クリックでスタート!</div> -->
     <script src="roulette.js"></script>
 </body>
 </html>
